tests/paczka1/fuzzy1/33419825.err
Error in line 6: SdA1D0t2 A747 46,6
Error in line 8: gibOgbM3uUN S415 83,8
Error in line 13: 7PRH A5R6 58,0
Error in line 11: 7P3H S334 72,8
Error in line 23: gibOgbM3uUN S415 60,3
Error in line 29: 7P3H A536 86,0
Error in line 32: jr3Tuad S415 72,3
